--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "require": {
-        "doctrine/dbal": "^2.5",
         "zendframework/zend-servicemanager": "^3.1",
         "aura/auth": "^2.0",
         "twig/twig": "^1.24",
         "aura/router": "^3.0",
-        "zendframework/zend-diactoros": "^1.3"
+        "zendframework/zend-diactoros": "^1.3",
+        "doctrine/orm": "^2.5",
+        "aura/session": "^2.0"
     },
     "autoload": {
         "classmap": ["src/"]
