--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "aura/router": "^3.0",
         "zendframework/zend-diactoros": "^1.3",
         "doctrine/orm": "^2.5",
-        "aura/session": "^2.0"
+        "aura/session": "^2.0",
+        "ramsey/uuid": "^3.4"
     },
     "autoload": {
         "classmap": ["src/"]
