--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "zendframework/zend-diactoros": "^1.3",
         "doctrine/orm": "^2.5",
         "aura/session": "^2.0",
-        "ramsey/uuid": "^3.4"
+        "ramsey/uuid": "^3.4",
+        "beberlei/assert": "^2.5"
     },
     "autoload": {
         "classmap": ["src/"]
