--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "doctrine/orm": "^2.5",
         "aura/session": "^2.0",
         "ramsey/uuid": "^3.4",
-        "beberlei/assert": "^2.5"
+        "beberlei/assert": "^2.5",
+        "relay/relay": "^1.1"
     },
     "autoload": {
         "classmap": ["src/"]
